[gd_scene load_steps=16 format=3 uid="uid://dip8upwv2sibq"]

[ext_resource type="Script" path="res://scenes/Line2D.gd" id="1_mafhj"]
[ext_resource type="Script" path="res://scenes/fireball.gd" id="1_xhigh"]
[ext_resource type="Texture2D" uid="uid://1pd6ykbwp7en" path="res://art/lightSphere.png" id="3_66lrt"]

[sub_resource type="Curve" id="Curve_bvkgb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ra355"]
curve = SubResource("Curve_bvkgb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_grv3f"]
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 63.53
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 45.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 10.0
damping_max = 10.0
scale_min = 0.02
scale_max = 0.02
scale_curve = SubResource("CurveTexture_ra355")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4u0ol"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_ikiiy"]
_data = [Vector2(0.164286, 0.105263), 0.0, 0.0, 0, 0, Vector2(0.964286, 0.968421), 0.0, 0.0, 0, 0, Vector2(0.964286, 0.968421), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_ulor8"]
offsets = PackedFloat32Array(0, 0.144928, 0.521739, 0.879227, 1)
colors = PackedColorArray(0.733333, 0.282353, 1, 0, 0.733333, 0.282353, 1, 1, 0.733333, 0.282353, 1, 1, 0.93266, 0.818776, 1, 1, 1, 1, 1, 0)

[sub_resource type="SphereMesh" id="SphereMesh_3i470"]

[sub_resource type="Animation" id="Animation_3hj04"]
resource_name = "fireballColor"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.921569, 0.92549, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1ki1u"]
resource_name = "rotate"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireballVisibility/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.886275, 0.74902, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mg5d3"]
resource_name = "rotate2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3i2wu"]
_data = {
"fireballColor": SubResource("Animation_3hj04"),
"rotate": SubResource("Animation_1ki1u"),
"rotate2": SubResource("Animation_mg5d3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_g0w25"]
radius = 9.0

[node name="Fireball" type="RigidBody2D" groups=["projectile"]]
self_modulate = Color(0.968627, 0.670588, 1, 1)
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_xhigh")

[node name="TrailParticles" type="GPUParticles2D" parent="."]
amount = 6
process_material = SubResource("ParticleProcessMaterial_grv3f")
texture = ExtResource("3_66lrt")
trail_enabled = true
trail_sections = 10
trail_section_subdivisions = 10

[node name="FireballVisibility" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="FireballVisibility"]
position = Vector2(0, -5)
scale = Vector2(1, 0.999999)

[node name="Line2D" type="Line2D" parent="FireballVisibility/Node2D"]
modulate = Color(1.5, 1.5, 1.5, 1)
material = SubResource("CanvasItemMaterial_4u0ol")
points = PackedVector2Array(-58, 2, -30, 7, -9, 4, 0, 0)
width = 8.0
width_curve = SubResource("Curve_ikiiy")
gradient = SubResource("Gradient_ulor8")
script = ExtResource("1_mafhj")
length = 50

[node name="Node2D2" type="Node2D" parent="FireballVisibility"]
position = Vector2(0, 5)
scale = Vector2(1, 0.999999)

[node name="Line2D2" type="Line2D" parent="FireballVisibility/Node2D2"]
modulate = Color(1.5, 1.5, 1.5, 1)
material = SubResource("CanvasItemMaterial_4u0ol")
points = PackedVector2Array(-58, 2, -30, 7, -9, 4, 0, 0)
width = 8.0
width_curve = SubResource("Curve_ikiiy")
gradient = SubResource("Gradient_ulor8")
script = ExtResource("1_mafhj")
length = 50

[node name="Sprite" type="MeshInstance2D" parent="FireballVisibility"]
scale = Vector2(19.5216, 19.2215)
mesh = SubResource("SphereMesh_3i470")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FireballVisibility"]
root_node = NodePath("../..")
autoplay = "rotate"
libraries = {
"": SubResource("AnimationLibrary_3i2wu")
}

[node name="Timer" type="Timer" parent="FireballVisibility"]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="FireballVisibility"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireballVisibility/Area2D"]
shape = SubResource("CircleShape2D_g0w25")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FireballVisibility/Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="FireballVisibility/Area2D" to="." method="_on_area_2d_area_entered"]
